--- a/app/src/main/res/layout/activity_password_recovery.xml
+++ b/app/src/main/res/layout/activity_password_recovery.xml
@@ -48,6 +48,7 @@
             android:layout_marginTop="6dp" />
 
         <TextView
+            android:id="@+id/TW"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
@@ -58,6 +59,7 @@
             android:layout_marginVertical="48dp" />
 
         <EditText
+            android:id="@+id/emailET"
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:drawableStart="@drawable/ic_email"
@@ -74,10 +76,11 @@
             android:textColor="@color/epochOnCard"
             tools:ignore="RtlSymmetry"
             android:autofillHints="no"
-            android:inputType="text" />
+            android:inputType="textEmailAddress" />
 
 
         <Button
+            android:id="@+id/recoverBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/recovery2"
