--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -158,7 +158,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
-            android:text="@string/PasswordError"
+            android:text="@string/passwordError"
             android:textColor="@color/mainHeader"
             android:textSize="24sp"
             android:paddingHorizontal="12dp"
@@ -170,7 +170,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
-            android:text="@string/LoginError"
+            android:text="@string/loginError"
             android:textColor="@color/mainHeader"
             android:textSize="24sp"
             android:paddingHorizontal="12dp"
@@ -182,7 +182,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
-            android:text="@string/PasswordComparisonError"
+            android:text="@string/passwordComparisonError"
             android:textColor="@color/mainHeader"
             android:textSize="24sp"
             android:paddingHorizontal="12dp"
@@ -194,7 +194,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
-            android:text="@string/EmptyFieldsError"
+            android:text="@string/emptyFieldsError"
             android:textColor="@color/mainHeader"
             android:textSize="24sp"
             android:layout_marginTop="6dp"
@@ -206,7 +206,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/russo_one"
             android:gravity="center"
-            android:text="@string/EmailFormatError"
+            android:text="@string/emailFormatError"
             android:textColor="@color/mainHeader"
             android:textSize="24sp"
             android:layout_marginTop="6dp"
