--- a/app/src/main/res/layout/activity_celebrates.xml
+++ b/app/src/main/res/layout/activity_celebrates.xml
@@ -259,7 +259,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pdfView"
+        android:id="@+id/recyclerViewCelebrates"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -268,7 +268,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/filterLayout"
         android:layout_marginHorizontal="8dp"
-        tools:listitem="@layout/card_epoch"
+        tools:listitem="@layout/card_holiday"
         />
 </LinearLayout>
 
