--- a/app/src/main/res/layout/activity_celebration.xml
+++ b/app/src/main/res/layout/activity_celebration.xml
@@ -1,134 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="start"
     tools:context=".CelebrationActivity">
 
-    <ImageButton
-        android:id="@+id/navDrawerBtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/navdrawer"
-        android:background="@color/transparent"
-        app:srcCompat="@drawable/btn_navdrawer_red"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <ImageButton
-        android:id="@+id/followBtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="@color/transparent"
-        app:layout_constraintEnd_toStartOf="@id/goBackBtn"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/btn_heart_unselected"
-        android:contentDescription="@string/follow_button"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        />
-    <ImageButton
-        android:id="@+id/goBackBtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:contentDescription="@string/navdrawer"
-        android:background="@color/transparent"
-        app:srcCompat="@drawable/btn_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <View
-        android:id="@+id/sepLine"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/separator_line_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/followBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_weight="0.3"/>
-    <TextView
-        android:id="@+id/header"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fontFamily="@font/russo_one"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:text="@string/celebrationNameExample"
-        android:textColor="@color/mainHeader"
-        android:textSize="40sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sepLine"
-        app:layout_constraintBottom_toTopOf="@id/currentDateTW"
-        app:layout_constraintVertical_weight="0.7"
-        />
-    <TextView
-        android:id="@+id/currentDateTW"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:fontFamily="@font/russo_one"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:text="@string/celebrationNameExample"
-        android:textColor="@color/mainHeader"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintBottom_toTopOf="@id/imageView"
-        app:layout_constraintVertical_weight="0.4"
-        />
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/currentDateTW"
-        app:layout_constraintBottom_toTopOf="@id/sepLine2"
-        android:contentDescription="@string/celebrationNameExample"
-        android:src="@drawable/profile_header"
-        android:scaleType="centerCrop"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginVertical="16dp"
-        app:layout_constraintVertical_weight="3"
-        />
-    <View
-        android:id="@+id/sepLine2"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/separator_line_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/scrollView"
-        app:layout_constraintVertical_weight="0.3"/>
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sepLine2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_weight="6"
-        >
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/navDrawerBtn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/transparent"
+            android:contentDescription="@string/navdrawer"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/btn_navdrawer_red" />
+
+        <ImageButton
+            android:id="@+id/followBtn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:background="@color/transparent"
+            android:contentDescription="@string/follow_button"
+            app:layout_constraintEnd_toStartOf="@id/goBackBtn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/btn_heart_unselected" />
+
+        <ImageButton
+            android:id="@+id/goBackBtn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/transparent"
+            android:contentDescription="@string/navdrawer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/btn_back" />
+
+        <View
+            android:id="@+id/sepLine"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/separator_line_horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/followBtn"
+            app:layout_constraintVertical_weight="0.3" />
+
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/titleTW"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:fontFamily="@font/tahoma"
+            android:layout_gravity="center"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
             android:text="@string/celebrationNameExample"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:layout_margin="16dp"
-            />
-    </ScrollView>
+            android:textColor="@color/mainHeader"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toTopOf="@id/currentDateTW"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sepLine"
+            app:layout_constraintVertical_weight="0.7" />
 
+        <TextView
+            android:id="@+id/dateTW"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/russo_one"
+            android:gravity="center"
+            android:text="@string/celebrationNameExample"
+            android:textColor="@color/mainHeader"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleTW"
+            app:layout_constraintVertical_weight="0.4" />
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="32dp"
+            android:layout_marginVertical="16dp"
+            android:contentDescription="@string/celebrationNameExample"
+            android:scaleType="centerCrop"
+            android:src="@drawable/profile_header"
+            app:layout_constraintBottom_toTopOf="@id/sepLine2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/dateTW"
+            app:layout_constraintVertical_weight="3" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/sepLine2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/separator_line_horizontal"
+            app:layout_constraintBottom_toTopOf="@id/scrollView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView"
+            app:layout_constraintVertical_weight="0.3" />
+
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sepLine2"
+            app:layout_constraintVertical_weight="6">
+
+            <TextView
+                android:id="@+id/descriptionTW"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="16dp"
+                android:fontFamily="@font/tahoma"
+                android:text="@string/celebrationNameExample"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/includedNavView"
+        layout="@layout/nav_drawer"
+        />
+</androidx.drawerlayout.widget.DrawerLayout>
