--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -976,6 +976,7 @@
                     android:id="@+id/recyclerViewRepeat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="300dp"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginVertical="16dp"
                     android:orientation="vertical"
@@ -1002,6 +1003,7 @@
                     android:id="@+id/recyclerViewSelectedCelebrates"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:minHeight="300dp"
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginVertical="16dp"
                     android:orientation="vertical"
